# celadro

./: CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.md  TODO  note.txt
example-guanming/load-config/: init_config.json
example-guanming/plot-files/: plot-6.py
examples/: box.sh  celadro  cleanup.sh  defects-flowfields.py  defects-stats.py  defects.py  example.sh  five.sh  interfaces.py  make_all_movies.sh  plot-cells.py  plot-correlations.py  plot-interfaces.py  plot-interfaces2.py  plot-nematic.py  plot-rmsvel.py  plot-shape.py  plot-vel.py  plot-velocity.py  plot.py  pp.py
examples/box/: plot.py
examples/circle/: plot.py
examples/cluster/: plot.py
examples/cross/: plot.py
examples/division/: plot.py
examples/relax/: plot.py
examples/shape/: plot.py
examples/splay/: plot.py
examples/substrate/: plot.py
examples/three/: plot.py
examples/two_phase_mixed/: init_config.json  mixedIC.py  plot.py
examples/two_phase_mixed/data/: init_config0.json
plot/: .archive.py.swp  .plot.py.swp  __init__.py  animation.py  archive.py  plot.py
plot/archive_base/: __init__.py  archive.py
scripts/: bend_splay.py  correlations.py  defects-flowfields.py  defects-stats.py  rmsvel.py  single-cells.py  track-defects.py
src/: CMakeLists.txt  configure.cpp  cuda.cpp  cuda.cu  cuda.h  cuda.hpp  derivatives.hpp  division.cpp  error_msg.hpp  files.cpp  files.hpp  header.hpp  init.cpp  main.cpp  model.hpp  options.cpp  parameters.cpp  parameters.hpp  patch.cpp  patch.hpp  random.cpp  random.hpp  read_config.cpp  reduce.h  run.cpp  run.cu  run.hpp  serialization.cpp  serialization.hpp  simpleJsonReader.cpp  simpleJsonReader.hpp  stencil.hpp  stencil_cuda.h  substrate.cpp  threads.cpp  threads.hpp  tools.hpp  vec.hpp  vec_cuda.h  write.cpp  (+1 more)
src/cuda/: cuda.cuh  reduce.cuh  run.cu
